Remove AndroidMonkey module

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,5 @@
 rootProject.name = 'MultiMonkey'
 
-include 'AndroidMonkey'
 include 'DesktopMonkey'
-include 'AndroidMonkey:app'
+include ':app'
 include 'core'
