--- a/http-server/build.gradle
+++ b/http-server/build.gradle
@@ -17,6 +17,8 @@ sourceSets {
 }
 
 dependencies {
+    implementation project(path: ':core')
+
     implementation "io.ktor:ktor-server-netty:1.1.3"
     implementation "io.ktor:ktor-gson:1.1.3"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
