--- a/http-server/resources/application.conf
+++ b/http-server/resources/application.conf
@@ -4,6 +4,6 @@ ktor {
   }
 
   application {
-    modules = [ ru.yandex.multimonkey.MainKt.main ]
+    modules = [ ru.yandex.testopithecus.MainKt.main ]
   }
 }
