--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.xrater.monkeyTest"
-        minSdkVersion 26
+        applicationId "ru.yandex.testopithecus"
+        minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -38,7 +38,10 @@ dependencies {
 
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
-
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.8'
-    implementation group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.8'
 }
+
+task putTestedApks(type: Exec) {
+    commandLine 'adb', 'push', 'src/androidTest/res/apks/', '/data/local/tmp'
+}
+
+
