--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.xrater.monkeyTest"
+        applicationId "ru.yandex.testopithecus"
         minSdkVersion 24
         targetSdkVersion 28
         versionCode 1
@@ -39,3 +39,9 @@ dependencies {
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
 }
+
+task putTestedApks(type: Exec) {
+    commandLine 'adb', 'push', 'src/androidTest/res/apks/', '/data/local/tmp'
+}
+
+
