--- a/desktop-monkey/build.gradle
+++ b/desktop-monkey/build.gradle
@@ -16,6 +16,8 @@ dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
     compile group: 'org.json', name: 'json', version: '20180813'
     compile group: 'khttp', name: 'khttp', version: '0.1.0'
+    compile project(path: ':core')
+    compile project(path: ':core')
 }
 
 compileKotlin {
