--- a/core/build.gradle
+++ b/core/build.gradle
@@ -14,12 +14,10 @@ test {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
-    compile group: 'org.json', name: 'json', version: '20180813'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.2.0'
-
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compile 'org.json:json:20180813'
+    implementation 'org.apache.commons:commons-lang3:3.0'
+    implementation 'org.jgrapht:jgrapht-core:1.2.0'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
 }
 
