--- a/http-server/build.gradle
+++ b/http-server/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation "io.ktor:ktor-server-netty:1.1.3"
     implementation "io.ktor:ktor-gson:1.1.3"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile group: 'org.freemarker', name: 'freemarker', version: '2.3.14'
     compile "ch.qos.logback:logback-classic:1.2.3"
     compile group: 'org.json', name: 'json', version: '20180813'
 }
