--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ build/
 !.idea/codeStyleSettings.xml
 !.idea/inspectionProfiles/Project_Default.xml
 !.idea/runConfigurations
+
+testopithecus-python/venv
