--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,18 +28,15 @@ android {
 
 dependencies {
     implementation project(':core')
-
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+    implementation 'org.apache.commons:commons-lang3:3.0'
     implementation 'khttp:khttp:0.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'junit:junit:4.12'
-
     androidTestImplementation 'androidx.test:core:1.1.0'
     androidTestImplementation 'androidx.test:runner:1.1.1'
-
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
 
