--- a/core/build.gradle
+++ b/core/build.gradle
@@ -12,16 +12,15 @@ repositories {
 test {
     useJUnitPlatform()
 }
-
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-
-    compile group: 'org.json', name: 'json', version: '20180813'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
-    implementation group: 'org.jgrapht', name: 'jgrapht-core', version: '1.2.0'
-
+    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8'
+    compile 'org.json:json:20180813'
+    implementation 'org.apache.commons:commons-lang3:3.0'
+    implementation 'org.jgrapht:jgrapht-core:1.2.0'
+    implementation 'khttp:khttp:0.1.0'
     testImplementation 'io.kotlintest:kotlintest-runner-junit5:3.3.2'
 }
+
 
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
