--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,8 @@ dependencies {
 }
 
 task putTestedApks(type: Exec) {
-    commandLine 'adb', 'push', 'src/androidTest/apks/', '/data/local/tmp'
+    commandLine 'adb', 'push', 'src/androidTest/apks/crash', '/data/local/tmp'
+    commandLine 'adb', 'push', 'src/androidTest/apks/nocrash', '/data/local/tmp'
 }
 
 
